# 3d-OpenGl-engine

./: .gitignore  CMakeLists.txt  README.md  glad.c  killdeathcpp.sln
assets/: rainbow_fs.txt  triangle_vs.txt
killdeathcpp/: 32ppBitMap.cpp  32ppBitMap.h  Animation.h  Animator.h  BBuffer.cpp  BBuffer.h  Bone.h  Camera.h  Colissions.cpp  Colissions.h  Geometry3D.h  HitBox.h  Lights.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.h  ModelMesh.h  Monster.cpp  Monster.h  Object.cpp  ObjectOrientation.cpp  ObjectOrientation.h  ObjectParams.h  Renderer.cpp  Renderer.h  Wav.cpp  Wav.h  collision.h  entity.cpp  entity.h  game.cpp  game.h  killdeathcpp.vcxproj  killdeathcpp.vcxproj.filters  main.c  misc.h  modelHelpers.h  object.h  (+17 more)
libraries/include/glad/: glad.h
libraries/lib/: glfw3.lib
models/glock/: license.txt  scene.gltf
models/mina/: license.txt  scene.gltf
shaders/: animation.fs  animation.vs  debugShader.fs  debugShader.vs  fancy_fs.txt  gltfModel.fs  gltfModel.vs  guad3d_vs.txt  guad_vs.txt  lightingMap.fs  line_vs.txt  modelAnimation.fs  modelAnimation.vs  quad3d.fs  quad3d.vs  quad3d_vs.txt  rainbow_fs.txt  triangle_vs.txt
